fixed double scroll, top of day not showing correctly because of company api call

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,7 @@ body {
   background: lightgray;
   font-family: "Roboto", sans-serif;
   min-height: 100%;
+  overflow-y: hidden;
 }
 
 .container {
